# python-client

./: .gitignore  LICENSE  README.MD  pyproject.toml  setup.py
.github/workflows/: pull-request.yml  release.yml
_local/: __init__.py
orangebeard/: Cli.py  OrangebeardClient.py  __init__.py  async_client.py  client.py
orangebeard/config/: AutoConfig.py
orangebeard/entity/: Attachment.py  Attribute.py  FinishStep.py  FinishTest.py  FinishTestRun.py  Log.py  LogFormat.py  LogLevel.py  OrangebeardParameters.py  SUTComponent.py  Serializable.py  StartStep.py  StartSuite.py  StartTest.py  StartTestRun.py  Suite.py  TestStatus.py  TestType.py
tests/: test.py  test_autoconfig.py  test_client.py  test_make_api_request.py  test_serializable.py
