[build-system]
requires = ["setuptools>=67.0"]
build-backend = "setuptools.build_meta"

[project]
name = "orangebeard-client"
version = "1.2.1"
authors = [
  { name="Tom Heintzberger", email="tom@orangebeard.io" },
]
description = "A python3 client for Orangebeard"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
        "License :: OSI Approved :: GNU Affero General Public License v3",
        "Operating System :: OS Independent",
]
dependencies = ["pytz", "urllib3,", "aiohttp"] 

[project.urls]
"Homepage" = "https://github.com/orangebeard-io/python-client"
"Bug Tracker" = "https://github.com/orangebeard-io/python-client/issues"