[build-system]
requires = [ "setuptools>=67.0",]
build-backend = "setuptools.build_meta"

[project]
name = "orangebeard-client"
version = "2.7.2"
description = "A python3 client for Orangebeard"
readme = "README.md"
requires-python = ">=3.7"
license = "AGPL-3.0-or-later"
classifiers = [ "Programming Language :: Python :: 3", "Operating System :: OS Independent",]
dependencies = [ "pytz", "aiohttp",]
[[project.authors]]
name = "Tom Heintzberger"
email = "tom@orangebeard.io"

[project.scripts]
orangebeard-cli = "orangebeard.Cli:main"

[project.urls]
Homepage = "https://github.com/orangebeard-io/python-client"
"Bug Tracker" = "https://github.com/orangebeard-io/python-client/issues"
